--- a/api-service/Dockerfile
+++ b/api-service/Dockerfile
@@ -2,20 +2,15 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+RUN npm install --omit=dev
 
-# Copy application code
 COPY . .
 
-# Create non-root user
 RUN addgroup -g 1001 -S nodejs && \
     adduser -S nodejs -u 1001
 
-# Set ownership
 RUN chown -R nodejs:nodejs /app
 
 USER nodejs
