Editing YAML files

--- a/k8s/03-api-deployment.yaml
+++ b/k8s/03-api-deployment.yaml
@@ -47,7 +47,7 @@ spec:
               topologyKey: kubernetes.io/hostname
       containers:
       - name: api-service
-        image: your-registry.io/api-service:1.0.0
+        image: docker.io/ibn3bbas/api-service:1.0.0
         imagePullPolicy: Always
         ports:
         - name: http
